# cardano-stake-csmt

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE.note  README.md  cabal.project  cardano-stake-csmt.cabal  flake.nix  fourmolu.yaml  gate.sh  justfile  mkdocs.yml
.github/workflows/: ci.yml  darwin-release.yml  deploy-docs.yml  release-planner.yml  release.yml
.specify/memory/: constitution.md
application/Cardano/StakeCSMT/Application/Run/: CLI.hs  Config.hs  Main.hs
docs/: api-proofs.md  architecture.md  getting-started.md  index.md
e2e-test/: main.hs
e2e-test/Cardano/StakeCSMT/E2E/: Genesis.hs  IndexerSpec.hs  LiveHTTPSpec.hs  ReplaySpec.hs
e2e-test/genesis/: shelley-genesis.json
executables/cardano-stake-csmt/: main.hs
http/Cardano/StakeCSMT/HTTP/: API.hs  Base16.hs  Query.hs  Server.hs  Signing.hs  Swagger.hs
lib/Cardano/StakeCSMT/: Indexer.hs
lib/Cardano/StakeCSMT/Application/: Health.hs
lib/Cardano/StakeCSMT/CSMT/: Builder.hs  Codecs.hs  Columns.hs  RocksDB.hs
lib/Cardano/StakeCSMT/History/: Builder.hs  Codecs.hs  Columns.hs  RocksDB.hs
lib/Cardano/StakeCSMT/Ledger/: Checkpoint.hs  Config.hs  Replay.hs  StakeSnapshot.hs
lib/Cardano/StakeCSMT/Store/: Columns.hs  RocksDB.hs
nix/: darwin-release.nix  docker-image.nix  linux-artifact-smoke.nix  linux-release.nix  project.nix  shell.nix
scripts/release/: get-cabal-version  plan
specs/002-scaffold/: plan.md  spec.md  tasks.md
specs/003-ledger-config/: plan.md  spec.md  tasks.md
specs/004-replay-engine/: plan.md  spec.md  tasks.md
specs/005-snapshot-extraction/: plan.md  spec.md  tasks.md
specs/006-csmt-builder/: plan.md  spec.md  tasks.md
specs/007-history-accumulator/: plan.md  spec.md  tasks.md
specs/008-rollback-checkpoint/: plan.md  spec.md  tasks.md
specs/009-http-api/: plan.md  spec.md  tasks.md
specs/010-e2e-golden/: plan.md  spec.md  tasks.md
specs/011-release-docs/: plan.md  spec.md  tasks.md
specs/012-daemon-config/: plan.md  spec.md  tasks.md
specs/013-indexer-engine/: plan.md  spec.md  tasks.md
specs/014-daemon-wiring/: plan.md  spec.md  tasks.md
specs/015-live-http-e2e/: plan.md  spec.md  tasks.md
specs/016-byron-era-skip/: plan.md  spec.md  tasks.md
specs/017-byron-epoch-horizon/: plan.md  spec.md  tasks.md
test/: main.hs
test/Cardano/StakeCSMT/: IndexerSpec.hs
test/Cardano/StakeCSMT/Application/: HealthSpec.hs  RunSpec.hs
test/Cardano/StakeCSMT/CSMT/: BuilderSpec.hs  CodecsSpec.hs  RocksDBSpec.hs
test/Cardano/StakeCSMT/HTTP/: APISpec.hs  Base16Spec.hs  QuerySpec.hs  ServerSpec.hs  SigningSpec.hs  SwaggerSpec.hs
test/Cardano/StakeCSMT/History/: BuilderSpec.hs  CodecsSpec.hs  RocksDBSpec.hs
test/Cardano/StakeCSMT/Ledger/: CheckpointSpec.hs  ConfigSpec.hs  ReplaySpec.hs  StakeSnapshotSpec.hs
