cabal-version:   3.4
name:            cardano-stake-csmt
version:         0.1.0.0
synopsis:        Stake CSMT service scaffold
description:
  Initial scaffold for a Cardano stake Compact Sparse Merkle Tree service.
  This package currently exposes only health and readiness endpoints.

license:         Apache-2.0
license-file:    LICENSE
author:          Lambda Sistemi
maintainer:      engineering@lambdasistemi.com
category:        Cardano
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  LICENSE.note

flag werror
  description: Enable -Werror
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  -- Thin main library required for haskell.nix compatibility.
  import:           warnings
  default-language: Haskell2010
  build-depends:
    , base                      <5
    , cardano-stake-csmt:library

library library
  import:           warnings
  visibility:       public
  hs-source-dirs:   lib
  default-language: Haskell2010
  exposed-modules:
    Cardano.StakeCSMT.Application.Health
    Cardano.StakeCSMT.CSMT.Builder
    Cardano.StakeCSMT.CSMT.Codecs
    Cardano.StakeCSMT.CSMT.Columns
    Cardano.StakeCSMT.CSMT.RocksDB
    Cardano.StakeCSMT.History.Builder
    Cardano.StakeCSMT.History.Codecs
    Cardano.StakeCSMT.History.Columns
    Cardano.StakeCSMT.History.RocksDB
    Cardano.StakeCSMT.Ledger.Config
    Cardano.StakeCSMT.Ledger.Checkpoint
    Cardano.StakeCSMT.Ledger.Replay
    Cardano.StakeCSMT.Ledger.StakeSnapshot

  build-depends:
    , aeson
    , base <5
    , bytestring
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-dijkstra
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-node-clients
    , cborg
    , chain-follower
    , contra-tracer
    , containers
    , directory
    , filepath
    , lens
    , mtl
    , mts:csmt
    , ouroboros-consensus:cardano
    , ouroboros-consensus:ouroboros-consensus
    , ouroboros-consensus:unstable-cardano-tools
    , ouroboros-network:api
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , text
    , transformers
    , vector-map

library http
  import:           warnings
  visibility:       public
  hs-source-dirs:   http
  default-language: Haskell2010
  exposed-modules:
    Cardano.StakeCSMT.HTTP.API
    Cardano.StakeCSMT.HTTP.Base16
    Cardano.StakeCSMT.HTTP.Query
    Cardano.StakeCSMT.HTTP.Server
    Cardano.StakeCSMT.HTTP.Signing
    Cardano.StakeCSMT.HTTP.Swagger

  build-depends:
    , aeson
    , aeson-pretty
    , base                       <5
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-slotting
    , cardano-stake-csmt:library
    , http-types
    , lens
    , mts:csmt
    , network
    , rocksdb-kv-transactions:kv-transactions
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , wai
    , wai-cors
    , warp

library application
  import:           warnings
  visibility:       public
  hs-source-dirs:   application
  default-language: Haskell2010
  exposed-modules:
    Cardano.StakeCSMT.Application.Run.CLI
    Cardano.StakeCSMT.Application.Run.Config
    Cardano.StakeCSMT.Application.Run.Main

  build-depends:
    , base                    <5
    , bytestring
    , cardano-crypto-class
    , cardano-stake-csmt:http
    , cardano-stake-csmt:library
    , directory
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions
    , wai

executable cardano-stake-csmt
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  main-is:          executables/cardano-stake-csmt/main.hs
  default-language: Haskell2010
  build-depends:
    , base                           <5
    , cardano-stake-csmt:application

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  other-modules:
    Cardano.StakeCSMT.Application.HealthSpec
    Cardano.StakeCSMT.Application.RunSpec
    Cardano.StakeCSMT.CSMT.BuilderSpec
    Cardano.StakeCSMT.CSMT.CodecsSpec
    Cardano.StakeCSMT.CSMT.RocksDBSpec
    Cardano.StakeCSMT.HTTP.APISpec
    Cardano.StakeCSMT.HTTP.Base16Spec
    Cardano.StakeCSMT.HTTP.QuerySpec
    Cardano.StakeCSMT.History.BuilderSpec
    Cardano.StakeCSMT.History.CodecsSpec
    Cardano.StakeCSMT.History.RocksDBSpec
    Cardano.StakeCSMT.HTTP.ServerSpec
    Cardano.StakeCSMT.HTTP.SigningSpec
    Cardano.StakeCSMT.HTTP.SwaggerSpec
    Cardano.StakeCSMT.Ledger.CheckpointSpec
    Cardano.StakeCSMT.Ledger.ConfigSpec
    Cardano.StakeCSMT.Ledger.ReplaySpec
    Cardano.StakeCSMT.Ledger.StakeSnapshotSpec

  build-depends:
    , aeson
    , base                       <5
    , bytestring
    , cardano-crypto-class
    , cardano-slotting
    , cardano-stake-csmt:application
    , cardano-stake-csmt:http
    , cardano-stake-csmt:library
    , cardano-ledger-core
    , cardano-node-clients
    , chain-follower
    , containers
    , directory
    , filepath
    , hspec
    , http-types
    , lens
    , mts:csmt
    , ouroboros-network:api
    , rocksdb-kv-transactions:kv-transactions
    , temporary
    , text
    , wai
    , wai-extra

test-suite e2e-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  hs-source-dirs:   e2e-test
  default-language: Haskell2010
  other-modules:
    Cardano.StakeCSMT.E2E.ReplaySpec

  build-depends:
    , base                           <5
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-stake-csmt:application
    , cardano-stake-csmt:library
    , cardano-slotting
    , cardano-node-clients:devnet
    , chain-follower
    , containers
    , filepath
    , hspec
    , ouroboros-consensus:ouroboros-consensus
    , ouroboros-network:api
    , rocksdb-kv-transactions:kv-transactions
    , temporary
